# SegmentacionRFM_TFG_V2

./: .gitignore  Dockerfile  README_STREAMLIT_CLOUD.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
configs/: rfm.yaml
dashboard/: TFG RFM Dashboard.html  app.jsx  app.py  data.js  sec_agents_reports.jsx  sec_eda.jsx  sec_eval_manual.jsx  sec_pipeline.jsx  sec_segments.jsx  styles.css  utils.py
dashboard/pages/: 01_Overview.py  02_EDA.py  03_Pipeline.py  04_Segments.py  05_Evaluation.py  06_Manual_vs_Pipeline.py  07_Agents.py  08_Reports.py  09_Methodology_CRISP_DM.py  10_Ethics_RGPD.py  11_Data_Model.py  12_TFG_Alignment.py  13_Limitations_Future.py
data/processed/: customer_rfm.parquet  customer_segments.parquet  online_retail_clean.parquet
reports/: benchmark_kmeans.json  benchmark_kmeans.md  cleaning_report.json  cleaning_report.md  eda_report.json  eda_report.md  efficiency_report.json  efficiency_report.md  evaluation_report.json  evaluation_report.md  manual_comparison.json  manual_comparison.md  raw_metadata.json  reproducibility_report.json  reproducibility_report.md  rfm_metadata.json  rfm_segments.json  rfm_segments.md  thresholds.json  traceability_manifest.json  validation_report.json  validation_report.md
src/rfm_pipeline/: __init__.py  benchmark.py  cleaning.py  cli.py  config.py  eda.py  efficiency.py  evaluation.py  features.py  ingestion.py  io.py  manual_baseline.py  reproducibility.py  segmentation.py  traceability.py  validation.py
src/rfm_pipeline/agents/: __init__.py
tests/: test_pipeline_core.py
(+2 files in other folders)
